Update to Horizon 1.0.2