@@ -2,15 +2,12 @@ package cz.goldzone.horizon.managers;
 
 import org.bukkit.World;
 
-import java.util.Arrays;
-import java.util.HashSet;
-import java.util.Set;
+import java.util.List;
 
 public class WorldManager {
-
-    private static final Set<String> VALID_WORLD_NAMES = new HashSet<>(Arrays.asList("world", "world_the_end", "world_nether"));
+    private static final List<String> VALID_WORLD_NAMES = List.of("world", "world_nether", "world_the_end");
 
     public static boolean isValidSourceWorld(World world) {
-        return VALID_WORLD_NAMES.contains(world.getName());
+        return world != null && VALID_WORLD_NAMES.contains(world.getName());
     }
 }
